fix-bug gap

--- a/src/css/location.css
+++ b/src/css/location.css
@@ -1,3 +1,6 @@
+.location-section {
+  margin-bottom: 40px;
+}
 @media only screen and (min-width: 1440px) {
   .location-container {
     /* position: relative; */
@@ -31,7 +34,6 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5;
-  margin-bottom: 40px;
 }
 .location-address {
   margin-bottom: 32px;
